<resources>
    <string name="app_name">DonateIt</string>
    <string name="food_server">Food Server</string>
    <string name="enter_food">Enter Food</string>
    <string name="quantity">Quantity</string>
    <string name="name_of_the_food">Name of the Food</string>
    <string name="quantity">Quantity</string>
    <string name="location">Location</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="city">City</string>
</resources>
