<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DonateFoodEdit">

    <Button
            android:text="@string/delete"
            android:layout_width="101dp"
            android:layout_height="36dp"
            android:id="@+id/button2" android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.764" app:layout_constraintVertical_bias="0.936"
            android:textStyle="bold"/>
    <EditText
            android:layout_width="190dp"
            android:layout_height="37dp"
            android:ems="10"
            android:id="@+id/editText3" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.792" android:hint="@string/city" android:textSize="14sp"
            android:inputType="text" android:autofillHints="" tools:targetApi="o" android:textStyle="bold"/>
    <TextView
            android:text="@string/location"
            android:layout_width="136dp"
            android:layout_height="30dp"
            android:id="@+id/textView5"
            android:textSize="18sp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintVertical_bias="0.795"/>
    <EditText
            android:layout_width="190dp"
            android:layout_height="37dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.655" android:hint="@string/quantity" android:textSize="14sp"
            android:autofillHints="" tools:targetApi="o" android:textStyle="bold"/>
    <TextView
            android:text="@string/quantity"
            android:layout_width="136dp"
            android:layout_height="30dp"
            android:id="@+id/textView4"
            android:textSize="18sp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintVertical_bias="0.66"/>
    <TextView
            android:text="@string/food_server"
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/textView" android:textSize="24sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="7dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintVertical_bias="0.312"/>
    <TextView
            android:text="@string/enter_food"
            android:layout_width="136dp"
            android:layout_height="30dp"
            android:id="@+id/textView2"
            android:textSize="18sp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintVertical_bias="0.537"/>
    <EditText
            android:layout_width="190dp"
            android:layout_height="37dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.53" android:hint="@string/name_of_the_food" android:textSize="14sp"
            android:autofillHints="" tools:targetApi="o" android:textStyle="bold"/>
    <Button
            android:text="@string/update"
            android:layout_width="101dp"
            android:layout_height="36dp"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.258" app:layout_constraintVertical_bias="0.936"
            android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>